--- a/app/views/buyer/print_entry.html.erb
+++ b/app/views/buyer/print_entry.html.erb
@@ -39,7 +39,7 @@
 				<% end %>
 
 				<% if item.is_online %>
-					<%= content_tag :td, class: 'center', colspan: 3 do %>
+					<%= content_tag :td, class: 'txtcenter', colspan: 3 do %>
 						<%= content_tag :em, 'Bidding session is ongoing.', class: 'small' %>
 					<% end %>
 				<% else %>
