--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -64,7 +64,7 @@
 			<%= content_tag :li, '', class: 'divider' %>
 			<%= nav_link('Send Payment Reminders', send_payment_reminder_path) %>
 			<%= nav_link('Send Delivery Reminders', delivery_reminder_path) %>
-			<%= nav_link('Special', delbids_path) %>
+			<%= nav_link('Special', delfees_path) %>
 		</ul>
 	<% end %>
 </ul>
