--- a/app/views/buyer/fees.html.erb
+++ b/app/views/buyer/fees.html.erb
@@ -49,7 +49,7 @@
 									<%= content_tag :span, f.fee_type.upcase, :class => 'label'  %>
 								<% else %>
 									<%= content_tag :span, currency(f.bid_total), class: "" %>
-									<%= content_tag :span, f.bid_type[0], class: 'label' %>
+									<%= content_tag :code, f.bid_type[0].upcase %>
 								<% end %>
 							<% end %>
 							<%= content_tag :div, class: 'factors txtcenter small' do %>
