--- a/app/views/seller/fees.html.erb
+++ b/app/views/seller/fees.html.erb
@@ -67,7 +67,7 @@
 								<% else %>
 									<%= content_tag :span, currency(f.bid_total) %>
 									<%= content_tag :code, f.bid_type[0].upcase %>
-									<%= content_tag :p, "Paid: #{regular_date(f.order_paid)}", class: "small" %>
+									<%= content_tag :p, "Paid: #{regular_date(f.order_paid)}", class: "small" if f.order_paid.present? %>
 								<% end %>
 							<% end %>
 							<%= content_tag :div, class: 'factors txtcenter small' do %>
