--- a/app/views/fees/index.html.erb
+++ b/app/views/fees/index.html.erb
@@ -6,19 +6,26 @@
 	<% subtitle "for paid orders #{period_covered_helper(@all_fees, params[:q])}" %>
 <% end %>
 
-<%= content_tag :h2, class: 'row' do %>
 	<% if params[:t] == 'bf' %>
+		<%= content_tag :h3, class: 'row' do %>
 		<%= content_tag :span, ph_currency(@all_fees.total_fee), class: 'span3' %>
-		<%= content_tag :span, ph_currency(@all_fees.supplier_share), class: 'span2' %>
-		<%#= display_buyer_company %>
+		<%= content_tag :small, "Base: #{currency(@all_fees.base_fee)}", class: 'span2' %>
+		<%= content_tag :small, "VAT: #{currency(@all_fees.vat)}", class: 'span2' %>
+		<% end %>
+		<%= content_tag :h3, class: 'row' do %>
+		<%= content_tag :span, ph_currency(@all_fees.supplier_share), class: 'span3' %>
+		<%= content_tag :small, "#{pluralize(@all_fees.count, 'part')} for #{pluralize(@all_fees.collect(&:entry_id).uniq.count, 'vehicle')}", class: 'span3' %>
+		<%= display_seller_company %>
+		<% end %>
 	<% else %>
+		<%= content_tag :h3, class: 'row' do %>
 		<%= content_tag :span, ph_currency(@all_fees.total_fee), class: 'span2' %>
 		<%= content_tag :small, "Base: #{currency(@all_fees.base_fee)}", class: 'span2' %>
 		<%= content_tag :small, "VAT: #{currency(@all_fees.vat)}", class: 'span2' %>
-		<%#= display_seller_company %>
+		<%= display_buyer_company %>
+		<% end %>
 	<% end %>
-<% end %>
-
+<hr>
 <%= content_tag :p, page_entries_info(@fees), class: 'muted' %>
 
 <%= content_tag :table, class: 'table table-condensed' do %>
