--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -11,6 +11,7 @@
 			<%= content_tag :li, '', class: 'divider' %>
 			<%= nav_link('With Orders', entries_path(s: 'ordered')) %>
 			<%= nav_link('Declined', entries_path(s: 'declined')) %>
+			<%= nav_link('Recently Expired', entries_path(s: 'expired')) %>
 			<%= content_tag :li, '', class: 'divider' %>
 			<%= content_tag :li, link_to('All Entries', entries_path) %>
 		</ul>
@@ -25,7 +26,7 @@
 			<%= nav_link('Delivered: Within Term', orders_path(s: 'delivered')) %>
 			<%= nav_link('Delivered: Overdue', orders_path(s: 'overdue')) %>
 			<%= content_tag :li, '', class: 'divider' %>
-			<%= nav_link('Paid: Unonfirmed', orders_path(s: 'paid.')) %>
+			<%= nav_link('Paid: Unconfirmed', orders_path(s: 'unconfirmed')) %>
 			<%= nav_link('Paid: Confirmed', orders_path(s: 'paid')) %>
 			<%= nav_link('Closed', orders_path(s: 'closed')) %>
 			<%= content_tag :li, '', class: 'divider' %>
@@ -66,7 +67,8 @@
 			<%= content_tag :li, '', class: 'divider' %>
 			<%= nav_link('Send Payment Reminders', send_payment_reminder_path) %>
 			<%= nav_link('Send Delivery Reminders', delivery_reminder_path) %>
-			<%= nav_link('Special', delfees_path) %>
+			<%= content_tag :li, '', class: 'divider' %>
+			<%= nav_link('Fix Entries', fix_path) %>
 		</ul>
 	<% end %>
 </ul>
