Reworking Variance. Disabled sellers viewing of winning bids. Fixing layout for fees. Fixed select menu for Branches in new user reg.

--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -55,6 +55,7 @@ td.bids input { margin-bottom: 4px; text-align: right; width: 100px }
 	p { text-align: center; }
 	}
 .bid-amount { margin-right: 5px; text-align: right; width: 68px; }
+.bid-amount a { color: #DDD; }
 .bids p.label { font-size: 1em; font-weight: normal; text-transform: none; }
 
 //.bid-box { 
