--- a/app/views/seller/_parts_table.html.erb
+++ b/app/views/seller/_parts_table.html.erb
@@ -31,18 +31,8 @@
 								
 								<% if t == type && current_user.company.users.include?(user) %>
 									<% own_bid = bs.last %>
-									<%= render own_bid if own_bid %>
-									
-									<% if !item.is_online %>
-										<% lo_bid = bids.last %>
-										<% if lo_bid != own_bid  %>
-											<%= content_tag :code, class: "small" do %>
-												<%= content_tag :span, currency(lo_bid.amount), class: " #{' cancelled' if lo_bid.cancelled?}" %>
-												<%= content_tag :em, 'winner' %>
-											<% end %>
-										<% end %>
-									<% end %>
-									
+									<%= render own_bid if own_bid %>									
+									<%= render 'seller/winning_bid', item: item, own_bid: own_bid, bids: bids unless current_user.id == 67 %>
 								<% end %> 
 	
 							<% end %>
