--- a/app/views/fees/index.html.erb
+++ b/app/views/fees/index.html.erb
@@ -76,7 +76,7 @@
 							<% else %>
 								<%= content_tag :span, currency(f.bid_total) %>
 								<%= content_tag :code, f.bid_type[0].upcase %>
-								<%= content_tag :p, "Paid: #{regular_date(f.order_paid)}", class: "small" if f.order_paid %>
+								<%= content_tag :p, "Paid: #{regular_date(f.order_paid, 'short')}", class: "small" if f.order_paid %>
 							<% end %>
 						<% end %>
 						<%= content_tag :div, class: 'factors txtcenter small' do %>
