--- a/app/views/variances/show.html.erb
+++ b/app/views/variances/show.html.erb
@@ -2,8 +2,41 @@
 <% subtitle "#{@entry.variant} (#{@entry.plate_no})" %>
 
 <%= content_tag :h2, 'Comparative Pricing Analysis' %>
-<%= content_tag :p, 'Source' %>
-<%= content_tag :p, 'Discount Applied' %>
 <div id="variance-table">
-	<%= render 'results' %>
+	<table class="table table-condensed table-bordered">
+		<thead>
+			<%= content_tag :th, 'Parts' %>
+			<%= content_tag :th, 'Qty', class: 'txtcenter' %>
+			<%= content_tag :th, class: 'txtcenter' do %>
+				<%= content_tag :h4, @variance.var_company.name %>
+				<%= content_tag :b, "Net of #{percentage(@variance.var_items.first.discount) if @variance.var_items.first.discount} Discount", class: 'label label-important' %>
+			<% end %>
+			<%= content_tag :th, 'E-Bid', class: 'txtcenter' %>
+			<%= content_tag :th, 'Variance', class: 'txtcenter' %>
+		</thead>
+		<% @entry.line_items.each_with_index do |item, index| %>
+			<tr>
+				<%= content_tag :td, class: 'span3' do %>
+					<%= content_tag :span, index + 1, class: 'label index'  %>
+					<%= content_tag :span, item.name %>
+					<%= content_tag :span, item.id if can? :access, :all %>
+				<% end %>
+				<%= content_tag :td, item.quantity, class: 'span1 txtcenter' %>
+				<%= content_tag :td, class: 'span2 txtright padrt' do %>
+					<%= currency(item.var_item.var_total) if  item.var_item %>
+					<%= content_tag :code, item.var_item.var_type[0..3] if  item.var_item %>
+				<% end %>
+				<%= content_tag :td, class: 'span2 txtright padrt' do %>
+					<% if item.var_item && item.var_item.total  %>
+						<%= currency(item.var_item.total) %>
+						<%= content_tag :code, item.var_item.bid_type[0..3] %>
+					<% else %>
+						<%= currency(item.bids.last.total) %>
+						<%= content_tag :code, item.bids.last.bid_type[0..3] %>
+					<% end %>
+				<% end %>
+				<%= content_tag :td, (currency(item.var_item.var_net) if  item.var_item && item.var_item.var_net.present?), class: 'span2 txtright padrt' %>
+			</tr>
+		<% end %>
+	</table>
 </div>
